--- a/doc/ChangeLog.txt
+++ b/doc/ChangeLog.txt
@@ -4,6 +4,45 @@
 版权所有：湖南翱云网络科技有限公司
 ##########################################
 
+PbootCMS V2.0.7 build 2020-03-20
+1、修复后台被登录成功后系统更新处可能造成的安全漏洞；
+
+PbootCMS V2.0.6 build 2020-03-18
+1、修复搜索结果关键字标红无法正常匹配大小写问题；
+2、新增后台“安全配置”中配置模板文件子目录功能；
+3、修复operate参数无法使用小数问题；
+4、新增tags列表支持指定参数target=tag跳转到tag.html模板，参考默认模板；
+5、新增home下ExtLabelController控制器文件扩展个人标签，升级不覆盖；
+6、优化调整前台代码结构；
+7、新增后台内容列表每页显示数量选择；
+8、修复tags重复显示问题；
+9、新增config/route.php文件自定义二开路由支持；
+10、新增API内容列表返回自适应的内容网页链接地址contentlink；
+11、修复API内容API链接错误并修改参数为apilink；
+12、修复API留言及表单无法关闭功能问题；
+
+PbootCMS V2.0.5 build 2020-01-31
+1、优化前台404.html，并支持内容内{info}自适应提示文字；
+2、优化内容列表排序方式,并修复api使用随机排序无效问题；
+3、修复后台入口文件修改名字后在线升级无法自适应问题；
+4、新增lfield="a,b,*"限制列表查询字段，提高大数据时速度；
+5、新增系统自适应入口文件子目录的能力；
+6、新增留言及表单数据清空功能(管理员)；
+7、新增留言及表单数据导出功能；
+8、新增mark=1标签参数对搜索结果关键字进行标红，如：[search:title mark=1]；
+9、其他问题修复与优化。
+
+PbootCMS V2.0.4 build 2020-01-21
+1、修复部分循环体控制参数无效问题；
+2、修复一处安全漏洞，并全局加强系统安全过滤；
+3、修复面包屑参数中不能使用html的问题；
+4、修复API接口中post方式page无效问题；
+5、新增程序全自动修改数据库名；
+6、新增operate参数对标签进行加减乘除等运算，如：[list:i operate=+100]；
+7、新增站点关闭功能；
+8、新增站点访问IP黑白名单功能；
+9、升级layui到最新版本。
+
 PbootCMS V2.0.3 build 2019-10-25
 1、修复一处PHP7环境下的安全漏洞；
 2、新增关闭留言、表单功能的开关；
